[project]
name = "pyxie"
version = "0.1.0"
authors = [
  { name="Ellipsis Labs", email="contributors@ellipsislabs.xyz" },
]
description = "Simple Python CLI tool for viewing Solana program metadata"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
 "solana",
 "solders",
 "pyelftools",
 "prettytable",
]
dynamic = ["scripts"]


[project.urls]
Homepage = "https://github.com/Ellipsis-Labs/pyxie"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
