[metadata]
name = pyxie
version = 0.0.2
author = Jarry Xiao
author_email = donald@stufft.io
description = Simple Python CLI tool for viewing Solana program metadata
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/Ellipsis-Labs/pyxie
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = src
python_requires = >=3.8
install_requires =
    solders
    solana
    prettytable
    pyelftools

[options.entry_points]
console_scripts =
    pyxie = src.pyxie:main
